--- a/exercises/4_information_retrieval.ipynb
+++ b/exercises/4_information_retrieval.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "**Idea:** Respond more quickly to customer service requests by using Natural Language Processing (NLP) and Information Retrieval to automatically suggest one or several FAQ articles or response templates given an incoming customer email to speed up the process of drafting a response.\n",
     "\n",
-    "Since personal emails are private, unfortunately there are no public datasets available with customer requests, so we instead test the methodology on a [question answering dataset](https://rajpurkar.github.io/SQuAD-explorer/). This dataset contains 477 wikipedia articles, each split into paragraphs, with several questions associated with each paragraph (i.e. where the answer to the question can be found in the paragraph).\n",
+    "Since personal emails are private, unfortunately there are no public datasets available with customer requests, so we instead test the methodology on a [question answering dataset](https://rajpurkar.github.io/SQuAD-explorer/). This dataset contains 477 wikipedia articles, each split into paragraphs, with several questions associated with each paragraph (i.e., where the answer to the question can be found in the paragraph).\n",
     "\n",
     "This means your task is, given a question, to identify the correct paragraph that contains the answer to this question."
    ]
@@ -22,10 +22,7 @@
     "import json\n",
     "import numpy as np\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.neighbors import NearestNeighbors\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "from sklearn.neighbors import NearestNeighbors"
    ]
   },
   {
@@ -91,7 +88,7 @@
    "source": [
     "## Assign Questions to Paragraphs\n",
     "\n",
-    "We first transform both the paragraphs as well as all questions associated with the paragraphs into TF-IDF features and then identify the most similar paragraph for a given question by computing the cosine similarity of the TF-IDF vector for the question to the TF-IDF vectors of all paragraphs to identify the most similar paragraphs, which we then return as the search results. "
+    "We first transform both the paragraphs, as well as all questions associated with the paragraphs, into TF-IDF features and then identify the most similar paragraph for a given question by computing the cosine similarity of the TF-IDF vector for the question to the TF-IDF vectors of all paragraphs to identify the most similar paragraphs, which we then return as the search results. "
    ]
   },
   {
@@ -116,9 +113,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# transform both paragraphs and questions into tf-idf features\n",
+    "# transform both paragraphs and questions into TF-IDF features\n",
     "vectorizer = TfidfVectorizer(strip_accents='unicode')\n",
-    "# learn internal parameters of vectorizer (vocabulary, idf weights) from known data\n",
+    "# learn internal parameters of vectorizer (vocabulary, IDF weights) from known data\n",
     "vectorizer.fit(paragraphs_corpus)\n",
     "# transform both datasets with the same vectorizer so they have the same feature dimensions\n",
     "X_pars = vectorizer.transform(paragraphs_corpus)\n",
@@ -250,9 +247,9 @@
    "source": [
     "#### Systematic performance analysis with the hits@k metric\n",
     "\n",
-    "While above we just collected some anecdotal evidence for the performance of our method, of course before deploying this into production we should conduct a more systematic evaluation. For this, we use the _hits@k_ metric, which, for different _k_, checks whether the correct answer was within the first _k_ search results. E.g. in a Google search, is the website you're looking for the 1st result, then this would be a hit@1, or is it on the first page, then it would still count towards the hits@10.\n",
+    "While above we just collected some anecdotal evidence for the performance of our method, of course before deploying this into production we should conduct a more systematic evaluation. For this, we use the *hits@k* metric, which, for different *k*, checks whether the correct answer was within the first *k* search results. E.g. in a Google search, is the website you're looking for the 1st result, then this would be a hit@1, or is it on the first page, then it would still count towards the hits@10.\n",
     "\n",
-    "In our example, we check both the hits@k for the paragraphs as well as the articles, i.e., we check for every paragraph that was returned as a search result, whether that was actually the correct paragraph, or whether it at least came from the right article."
+    "In our example, we check both the hits@k for the paragraphs, as well as the articles, i.e., we check for every paragraph that was returned as a search result, whether that was actually the correct paragraph, or whether it at least came from the right article."
    ]
   },
   {
@@ -299,10 +296,14 @@
    "source": [
     "# Exercises\n",
     "\n",
-    "For these exercises, please work on the complete set of articles, not the subset we used for now, i.e., load the data again. To construct a single text from all paragraphs of an article, we join them together with `\"\\n\".join(list_of_paragraphs)`.\n",
+    "For these exercises, please work on the complete set of articles, not the subset we used for now, i.e., load the data again. To construct a single text from all paragraphs of an article, we join them together with `\"\\n\".join(list_of_paragraphs)` (i.e., one data point is now not one paragraph, but one artice).\n",
     "\n",
     "### 1. Find the article that is most similar to the article about \"Beer\"\n",
-    "To do this, compute the cosine similaritiy between the target article with the title \"Beer\" and all other articles and choose the most similar one (not counting the target article itself ;-)). Similar to how we selected a matching paragraph for each question, this can be done with the `NearestNeighbors` class from `sklearn`."
+    "Our dataset contains an article with the title \"Beer\". Your task is to identify another article in the dataset that is the most similar to this article about beer.\n",
+    "\n",
+    "To do this, compute the cosine similaritiy between the target article with the title \"Beer\" and all other articles and choose the most similar one (not counting the target article itself ;-)). Similar to how we selected a matching paragraph for each question, this can be done with the `NearestNeighbors` class from `sklearn`.\n",
+    "\n",
+    "**Important:** Don't search for the article closest to the word \"beer\", but to the *whole article with the title \"Beer\"*."
    ]
   },
   {
@@ -319,7 +320,7 @@
     "article_ids = sorted(articles.keys())\n",
     "\n",
     "# get the corresponding texts of these articles by concatenating all the paragraphs of each article.\n",
-    "# the texts in this list are in the same order as the article titles in article_ids.\n",
+    "# the article texts in this list are in the same order as the article titles in article_ids.\n",
     "article_corpus = [\"\\n\".join([p[\"paragraph\"] for p in articles[a]]) for a in article_ids]\n",
     "print(len(article_corpus))"
    ]
@@ -330,7 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# now the article texts need to be transformed into a tf-idf feature matrix X\n",
+    "# transform the article texts into a TF-IDF feature matrix X\n",
     "X = ...\n",
     "\n",
     "# when you're done, check how many articles and feature dimensions were generated\n",
@@ -344,7 +345,7 @@
    "outputs": [],
    "source": [
     "# find out the index of our target article \"Beer\" (remember the titles are in article_ids), \n",
-    "# so you know which row in the feature matrix X contains the corresponding tf-idf vector\n",
+    "# so you know which row in the feature matrix X contains the corresponding TF-IDF vector\n",
     "# (so that you can use this vector to get the nearest neighbors)\n"
    ]
   },
@@ -354,8 +355,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# find the most similar article with NearestNeighbors\n",
-    "\n",
+    "# find the most similar article with NearestNeighbors\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# based on the index of the most similar article, get the title of this article\n"
    ]
   },
@@ -366,7 +374,11 @@
     "## Advanced Exercises\n",
     "\n",
     "### 2. Find the most similar article to \"Beer\" - without using `NearestNeighbors`!\n",
-    "Solve the above task without using the `NearestNeighbors` class, i.e., by computing the similarities and selecting the most similar article yourself. Since the TF-IDF feature vectors are by default length-normalized, the cosine similarity between the articles can be computed with a simple dot-product (but beware: X is by default a sparse matrix, i.e., `np.dot()` wont work, but you can also call `.dot()` at an array or sparse matrix directly). The result of the dot-product will still be sparse, but you can call `.toarray()` on a sparse matrix to convert it into a regular dense numpy array with which you can work as usual. Once you have a vector with similarities, the functions `np.argmax` or `np.argsort` might be helpful."
+    "Solve the above task without using the `NearestNeighbors` class, i.e., by computing the similarities and selecting the most similar article yourself. \n",
+    "\n",
+    "Since the TF-IDF feature vectors are by default length-normalized, the cosine similarity between the articles can be computed with a simple dot-product (but beware: X is by default a sparse matrix, i.e., `np.dot()` wont work, but you can also call `.dot()` on an array or sparse matrix directly). The result of the dot-product will still be sparse, but you can call `.toarray()` on a sparse matrix to convert it into a regular dense numpy array with which you can work as usual. \n",
+    "\n",
+    "Once you have a vector with similarities, the functions `np.argmax` or `np.argsort` might be helpful."
    ]
   },
   {
@@ -381,7 +393,9 @@
    "metadata": {},
    "source": [
     "### 3. Find the two most similar articles in the set\n",
-    "From all articles, which two have the most similar text? What is their cosine similarity score?"
+    "From all articles, which two have the most similar text? What is their cosine similarity score?\n",
+    "\n",
+    "**Question:** Do you have an idea *why* these two articles might have been identified as similar?"
    ]
   },
   {
