--- a/exercises/5_mnist_keras.ipynb
+++ b/exercises/5_mnist_keras.ipynb
@@ -39,10 +39,7 @@
     "from tensorflow.keras.datasets import mnist, fashion_mnist\n",
     "from tensorflow.keras import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPooling2D\n",
-    "from tensorflow.keras import backend as K\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "from tensorflow.keras import backend as K"
    ]
   },
   {
@@ -103,6 +100,7 @@
     "    if use_fashion:\n",
     "        (x_train, y_train), (x_test, y_test) = fashion_mnist_load_local_data()  # fashion_mnist.load_data()\n",
     "    else:\n",
+    "        # might need to use mnist.load_data(path=\"mnist.npz\") when executing on Google Colab\n",
     "        (x_train, y_train), (x_test, y_test) = mnist.load_data(path=os.path.join(os.path.abspath(\"../data/\"), \"mnist.npz\"))\n",
     "\n",
     "    if K.image_data_format() == 'channels_first':\n",
@@ -329,7 +327,7 @@
     "y_pred = model.predict(x_test)\n",
     "# convert predictions to classes\n",
     "y_pred_classes = np.argmax(y_pred, axis=1)\n",
-    "print(accuracy_score(y_test, y_pred_classes))\n",
+    "print(accuracy_score(y_test, y_pred_classes), \"\\n\")\n",
     "# train multi-layer FFNN\n",
     "model = train_ffnn(x_train, y_train_cat)\n",
     "score = model.evaluate(x_test, y_test_cat, verbose=0)\n",
@@ -404,7 +402,7 @@
    "source": [
     "## Test all models on the Fashion MNIST dataset\n",
     "\n",
-    "On the more difficult FMNIST task, the LogReg model has a much lower accuracy of 86.6%. When trained for only a single epoch, both the linear and multi-layer FFNNs have a lower accuracy (82.7 and 83.7% respectively) and only the CNN does a bit better (88.6%). "
+    "On the more difficult FMNIST task, the LogReg model has a much lower accuracy of 84.4% compared to the 92.6% achieved on the original MNIST dataset. When trained for only a single epoch, both the linear and multi-layer FFNNs have a lower accuracy than the LogReg model (80.5 and 81.9% respectively) and only the CNN does a bit better (86.5%). "
    ]
   },
   {
@@ -452,15 +450,15 @@
     "# train LogReg classifier\n",
     "clf = LogisticRegression(class_weight='balanced', random_state=1, fit_intercept=True)\n",
     "clf.fit(x_train, y_train)\n",
-    "print('Test accuracy LogReg:', clf.score(x_test, y_test))\n",
+    "print('Test accuracy LogReg:', clf.score(x_test, y_test), \"\\n\")\n",
     "# train simple linear model\n",
     "model = train_linnn(x_train, y_train_cat)\n",
     "score = model.evaluate(x_test, y_test_cat, verbose=0)\n",
-    "print('Test accuracy Linear NN:', score[1])\n",
+    "print('Test accuracy Linear NN:', score[1], \"\\n\")\n",
     "# train multi-layer FFNN\n",
     "model = train_ffnn(x_train, y_train_cat)\n",
     "score = model.evaluate(x_test, y_test_cat, verbose=0)\n",
-    "print('Test accuracy FFNN:', score[1])\n",
+    "print('Test accuracy FFNN:', score[1], \"\\n\")\n",
     "# load data again (not reshaped)\n",
     "x_train, x_test, y_train, y_test = load_data(True)\n",
     "y_train_cat, y_test_cat = convert_cat(y_train, y_test)\n",
@@ -595,11 +593,11 @@
     "# train simple linear model\n",
     "model = train_linnn(x_train, y_train_cat, epochs=15)\n",
     "score = model.evaluate(x_test, y_test_cat, verbose=0)\n",
-    "print('Test accuracy Linear NN:', score[1])\n",
+    "print('Test accuracy Linear NN:', score[1], \"\\n\")\n",
     "# train multi-layer FFNN\n",
     "model = train_ffnn(x_train, y_train_cat, epochs=15)\n",
     "score = model.evaluate(x_test, y_test_cat, verbose=0)\n",
-    "print('Test accuracy FFNN:', score[1])\n",
+    "print('Test accuracy FFNN:', score[1], \"\\n\")\n",
     "# load data again (not reshaped)\n",
     "x_train, x_test, y_train, y_test = load_data(True)\n",
     "y_train_cat, y_test_cat = convert_cat(y_train, y_test)\n",
