--- a/exercises/5_mnist_torch.ipynb
+++ b/exercises/5_mnist_torch.ipynb
@@ -38,10 +38,7 @@
     "from skorch.callbacks import EpochScoring\n",
     "# set random seeds to get (at least more or less) reproducable results\n",
     "np.random.seed(28)\n",
-    "torch.manual_seed(28)\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "torch.manual_seed(28);"
    ]
   },
   {
@@ -115,8 +112,8 @@
     "X_train, X_test, y_train, y_test = load_data()\n",
     "plot_images(X_train)\n",
     "# Fashion MNIST\n",
-    "X_train, X_test, y_train, y_test = load_data(use_fashion=True)\n",
-    "plot_images(X_train)"
+    "X_train_F, X_test_F, y_train_F, y_test_F = load_data(use_fashion=True)\n",
+    "plot_images(X_train_F)"
    ]
   },
   {
@@ -195,7 +192,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# look at the network's output for the first data point\n",
+    "# check the image of the first training sample\n",
+    "plt.imshow(X_train[0].reshape(28, 28));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# look at the network's output for this first data point\n",
     "# -> since the network wasn't trained yet, the predicted probabilities for all 10 classes are ~0.1\n",
     "# (notice the grad parameter, which indicates that the network kept track of the gradients,\n",
     "# which are needed for later tuning the weights during training)\n",
@@ -258,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# we can also get the original probabilities\n",
+    "# we can also get the original probabilities (notice the higher value at the index of the true class)\n",
     "y = net.predict_proba(X_train[:16])\n",
     "y[0]"
    ]
@@ -269,7 +276,7 @@
    "source": [
     "## Define NNs for the classification task\n",
     "\n",
-    "In the code below we define 3 different neural network architectures: a linear FFNN, a FFNN with multiple hidden layers, and a CNN, which is an architecture particularly well suited for image classification tasks.\n",
+    "In the code below, we define 3 different neural network architectures: a linear FFNN, a FFNN with multiple hidden layers, and a CNN, which is an architecture particularly well suited for image classification tasks.\n",
     "\n",
     "You will see that the more complex architectures use an additional operation between layers called `Dropout`. This is a regularization technique used for training neural networks, where a certain percentage of the values in the hidden layer representation of a data point are randomly set to zero. You can think of this as the network suffering from a temporary stroke, which forces the neurons learn redundant representations (i.e., such that one neuron can take over for another neuron that was knocked out), which improves generalization."
    ]
@@ -368,7 +375,7 @@
     "    net.fit(X_train, y_train)\n",
     "    # evaluate on test set\n",
     "    y_pred = net.predict(X_test)\n",
-    "    print('Test accuracy:', accuracy_score(y_test, y_pred))\n",
+    "    print('Test accuracy:', accuracy_score(y_test, y_pred), \"\\n\")\n",
     "    return net"
    ]
   },
@@ -380,7 +387,7 @@
     "\n",
     "As you see below, the simple logistic regression classifier is already very good on this easy task, with a test accuracy of over 93.5%.\n",
     "\n",
-    "The linear FFNN has almost the same accuracy (90.5%) as the LogReg model (please note the NNs were only trained for a single epoch!) and the multi-layer FFNN is already better than the LogReg model (96.4%), while the CNN beats them all (98.2%), which is expected since this architecture is designed for the image classification task."
+    "The linear FFNN has almost the same accuracy (90.5%) as the LogReg model (please note: the NNs were only trained for a single epoch!) and the multi-layer FFNN is already better than the LogReg model (96.4%), while the CNN beats them all (98.2%), which is expected since this architecture is designed for the image classification task."
    ]
   },
   {
@@ -444,7 +451,7 @@
     "print(\"### LogReg\")\n",
     "clf = LogisticRegression(class_weight='balanced', random_state=1, fit_intercept=True)\n",
     "clf.fit(X_train, y_train)\n",
-    "print('Test accuracy:', clf.score(X_test, y_test))\n",
+    "print('Test accuracy:', clf.score(X_test, y_test), \"\\n\")\n",
     "# and our different NN architectures\n",
     "for net_module in [LinNN, FFNN, CNN]:\n",
     "    if net_module == CNN:\n",
@@ -461,7 +468,7 @@
    "source": [
     "## Test on FashionMNIST\n",
     "\n",
-    "On the more difficult FMNIST task, the LogReg model has a much lower accuracy of 86.6%. When trained for only a single epoch, both the linear and multi-layer FFNNs have a lower accuracy (82.7 and 83.7% respectively) and only the CNN does a bit better (88.6%). "
+    "On the more difficult FMNIST task, the LogReg model has a much lower accuracy of 86.6% compared to the 93.5% achieved on the original MNIST dataset. When trained for only a single epoch, both the linear and multi-layer FFNNs have a lower accuracy than the LogReg model (82.7 and 83.7% respectively) and only the CNN does a bit better (88.6%). "
    ]
   },
   {
@@ -524,7 +531,7 @@
     "print(\"### LogReg\")\n",
     "clf = LogisticRegression(class_weight='balanced', random_state=1, fit_intercept=True)\n",
     "clf.fit(X_train, y_train)\n",
-    "print('Test accuracy:', clf.score(X_test, y_test))\n",
+    "print('Test accuracy:', clf.score(X_test, y_test), \"\\n\")\n",
     "# our different NN\n",
     "for net_module in [LinNN, FFNN, CNN]:\n",
     "    if net_module == CNN:\n",
@@ -539,7 +546,7 @@
    "source": [
     "However, when trained for more epochs, the performance of all models improves, with the accuracy of the linear FFNN now being very close to that of the LogReg model (85.8%), while the multi-layer FFNN is better (89.3%) and the CNN can now solve the task quite well with an accuracy of 94.6%.\n",
     "\n",
-    "(See how the training and validation loss decrease over time - observing how these metrics develop can help you judge whether you've set your learning rate correctly.)"
+    "(See how the training and validation loss decrease over time - observing how these metrics develop can help you judge whether you've set your learning rate correctly and for how many epochs you should train the network.)"
    ]
   },
   {
