--- a/exercises/6_analyze_toydata.ipynb
+++ b/exercises/6_analyze_toydata.ipynb
@@ -30,11 +30,7 @@
     "import plotly.express as px\n",
     "# suppress unnecessary warnings\n",
     "import warnings\n",
-    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
-    "\n",
-    "# these are some 'magic' commands for the notebook to automatically load updated libraries\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "warnings.simplefilter(action='ignore', category=FutureWarning)"
    ]
   },
   {
@@ -177,7 +173,7 @@
     "**Questions:**\n",
     "- If all that someone had told you was that two variables have a linear correlation of 0.7, is this the scatter plot that you would have imagined for the two variables? (You might also want to look at the Wikipedia article again for some other example plots)\n",
     "- Why is the correlation coefficient for these two variables so large?\n",
-    "- What would you expect the correlation coefficient to be if you only consider the large blob in the middle?\n",
+    "- What would you expect the correlation coefficient to be if you only consider the large blob in the middle (i.e., ignore the points at (0, 0))?\n",
     "\n",
     "In reality, it often happens that two variables seem to be perfectly correlated (i.e., they have a correlation coefficient of (almost) 1), but when you look closer, then this is just due to the fact that, for example, two sensors are off at the same time, but for the part where they're on, they actually aren't giving redundant values. Therefore be careful before throwing away \"rendundant\" variables and always verify the correlation with a scatter plot!"
    ]
@@ -578,7 +574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, the tree is quite big and therefore also more tedious to interpret. Additionally, we see that many of the splits right before the leaf nodes are made without any change in the predicted class (i.e., all the nodes remain orange). This happens, because the tree itself only cares about the Gini impurity, which indeed still decreases after these splits. However, since this is not helpful for us, lets prune on the tree by cutting off these unnecessary splits, which can be done by setting the parameter `ccp_alpha`."
+    "As you can see, the tree is quite big and therefore also more tedious to interpret. Additionally, we see that many of the splits right before the leaf nodes are made without any change in the predicted class (e.g., all the nodes remain orange). This happens, because the tree itself only cares about the Gini impurity, which indeed still decreases after these splits. However, since this is not helpful for us, lets prune on the tree by cutting off these unnecessary splits, which can be done by setting the parameter `ccp_alpha`."
    ]
   },
   {
@@ -740,7 +736,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The performance is still a lot lower than what we got with a decision tree... Furthermore, you saw in both cases that the model threw a `ConvergenceWarning`. While this isn't too tragic (usually the results are still quite good), in many cases this warning occurs when the data isn't normally distributed (i.e., violates the model's assumptions) and the results often get better when you transform the data accordingly. Therefore, we now use the `StandardScaler` to ensure each feature has a mean of 0 and a standard deviation of 1."
+    "The performance is still a lot lower than what we got with a decision tree... Furthermore, you saw in both cases that the model threw a `ConvergenceWarning`. While this usually isn't too tragic in practice (in most cases the results are still quite good), in many cases this warning occurs when the data isn't normally distributed (i.e., violates the model's assumptions) and the results often get better when you transform the data accordingly. Therefore, we now use the `StandardScaler` to ensure each feature has a mean of 0 and a standard deviation of 1."
    ]
   },
   {
@@ -790,7 +786,7 @@
     "# the coefficients tell us why an item was classified as faulty:\n",
     "# higher temperatures lead to faulty items, but we have different offsets for the different products, \n",
     "# i.e., product 3 can handle higher temperatures than product 1\n",
-    "# -> features with small coefficients can be removed\n",
+    "# -> features with very small coefficients can be removed\n",
     "dict(zip(feature_cols, clf.coef_[0]))"
    ]
   },
@@ -843,6 +839,27 @@
    "metadata": {},
    "source": [
     "While it was a bit more work to set up the logistic regression model appropriately, incl. extra data preprocessing steps, we now even got a balanced accuracy on the test set that is slightly higher than that of the decision tree (0.938 instead of 0.935)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Advanced Exercise (optional)\n",
+    "\n",
+    "Use a neural network (either using the `torch`/`skorch` (recommended) or `tensorflow`/`keras` libraries) to solve this task.\n",
+    "\n",
+    "Start with a linear network (i.e., a FFNN without hidden layers, i.e., the same number of trainable parameters as the logistic regression model used above) and try to get approximately the same performance as the LogReg model.\n",
+    "\n",
+    "Then use a deeper network (e.g., one additional hidden layer) and see if this improves the performance.\n",
+    "\n",
+    "**Tips:**\n",
+    "- Make sure to use scaled data!\n",
+    "- Since the faulty products are underrepresented, samples from this class should get a higher weight during training (similar to what we're doing with `class_weight=\"balanced\"` in sklearn models). \n",
+    "\n",
+    "**Using `torch` & `skorch`:**\n",
+    "- Use a skorch [`NeuralNetBinaryClassifier`](https://skorch.readthedocs.io/en/latest/classifier.html). Here the torch network shoud predict the output without any non-linear activation function at the end (i.e., *don't* use a sigmoid function to convert the output into probabilities) as the skorch model takes care of this conversion for you!\n",
+    "- The sample weights can be set by passing `criterion__pos_weight=torch.Tensor([np.sum(y_train==0)/np.sum(y_train==1)])` as an argument to the `NeuralNetBinaryClassifier` (see also the documentation for the torch [`BCEWithLogitsLoss`](https://pytorch.org/docs/stable/generated/torch.nn.BCEWithLogitsLoss.html) loss function, which is used internally by the skorch model)"
    ]
   },
   {
