--- a/exercises/8_rl_gridmove.ipynb
+++ b/exercises/8_rl_gridmove.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reinforcement Learning with discrete states and actions\n",
+    "# Tabular Reinforcement Learning (with discrete states and actions)\n",
     "\n",
     "In this notebook we demonstrate how a RL agent can learn to navigate the grid world environment shown in the book using Q-learning."
    ]
@@ -196,7 +196,7 @@
     "    plt.xlabel(\"episode\")\n",
     "    plt.ylabel(\"cumulative reward\")\n",
     "    plt.ylim(-100, 100)\n",
-    "    return Q, cum_rewards\n",
+    "    return Q\n",
     "\n",
     "def vis_Q(Q, env):\n",
     "    # see which state-action values we have learned\n",
@@ -241,6 +241,88 @@
     "# much more exploration (and more steps to do it)\n",
     "# -> also finds the second path\n",
     "Q = learn_Q(max_steps=250000, decay_rate=0.00001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predict Q-values with a simple `torch` NN\n",
+    "\n",
+    "While training a Q-network goes beyond this course, here is a simple example of how the prediction of Q-values could look like with a neural network. In reality, the state vectors wouldn't be one-hot encoded vectors, but instead some meaningful representation of the states such that the RL agent could also generalize to unseen states."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# torch neural network stuff\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class LinNN(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, Q):\n",
+    "        super(LinNN, self).__init__()\n",
+    "        self.l = nn.Linear(Q.shape[0], Q.shape[1], bias=False)\n",
+    "        # we're not training the network, but directly initialize it with the optimal weights\n",
+    "        self.l.weight.data = torch.Tensor(Q.T)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        y = self.l(x)\n",
+    "        return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialize the network with the learned Q matrix\n",
+    "qnn = LinNN(Q)\n",
+    "# check that the weights are set appropriately\n",
+    "# -> same picture as above for the Q-matrix, just transposed\n",
+    "plt.imshow(qnn.l.weight.data)\n",
+    "plt.clim(-100, 100);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate an input feature vector for some test state\n",
+    "test_state = (2, 0)\n",
+    "# get the index for this state\n",
+    "env = Environment()\n",
+    "test_state_idx = env.possible_states.index(test_state)\n",
+    "# transform into a one-hot encoded torch vector\n",
+    "input_tensor = torch.zeros((1, len(env.possible_states)))\n",
+    "input_tensor[0, test_state_idx] = 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check the Q-network \"predictions\"\n",
+    "qnn(input_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# verify that the results are the same as the corresponding row from the Q-matrix\n",
+    "Q[test_state_idx]"
    ]
   },
   {
